# tt-ledger

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
config/: accounts.toml.example  securities.toml.example
docs/: api.md  design.md  glossary.md  identity.md  implementation-notes.md  ingestion.md  integration-zts.md  schema.md  storage.md  symbology.md
tests/: conftest.py  test_api.py  test_balances.py  test_cli.py  test_config_securities.py  test_identity_accounts.py  test_identity_canonical.py  test_ingest_mock_broker.py  test_ingest_pull.py  test_ingest_push.py  test_ingest_reconcile.py  test_ingest_redis_source.py  test_ingest_redis_stream_source.py  test_ingest_remap.py  test_ingest_replay.py  test_ingest_tastytrade_client.py  test_ingest_tastytrade_stream.py  test_intent_groups.py  test_link_order.py  test_migrate.py  test_read_structure.py  test_reconcile_exits.py  test_reconcile_heal.py  test_reconcile_lapse.py  test_sdk.py  test_smoke.py  test_store_memory.py  test_store_sql.py
tt_ledger/: __init__.py  _toml.py  cli.py  enums.py  money.py  rows.py  sdk.py
tt_ledger/api/: __init__.py  app.py  routes.py  schemas.py
tt_ledger/config/: __init__.py
tt_ledger/identity/: __init__.py  accounts.py  canonical.py  securities.py
tt_ledger/ingest/: __init__.py  broker.py  mock_broker.py  pull.py  push.py  reconcile.py  redis_source.py  redis_stream_source.py  remap.py  replay.py  tastytrade_client.py  tastytrade_stream.py
tt_ledger/repositories/: __init__.py
tt_ledger/schema/: __init__.py  _base.py  migrate.py  models.py  namespace.py
tt_ledger/schema/migrations/: README.md  env.py
tt_ledger/schema/migrations/versions/: 0126b2d5742a_initial_schema.py  8f3a1c5e9b02_order_legs_natural_key.py  a1b2c3d4e5f6_balance_snapshots.py  b2c3d4e5f6a7_closed_positions_net_pnl.py  c3d4e5f6a8b9_trade_groups_structure.py  d4e5f6a7c9b1_trade_groups_initial_risk.py  e5f6a7b8c2d3_widen_broker_text_columns.py  f6a7b8c9d4e5_trade_groups_status_index.py
tt_ledger/store/: __init__.py  base.py  memory.py  sql.py
