[project]
name = "tt-ledger"
version = "0.1.0"
description = "Portable broker order/transaction/fill/position ledger with a pluggable store (SQLite default, Postgres opt-in)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Stephen Zagar" }]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",   # [asyncio] pulls greenlet (required for async engines)
    "aiosqlite>=0.20",            # bundled default backend — zero infra
    "alembic>=1.13",
    "pydantic>=2.5",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
tastytrade = ["httpx>=0.26", "websockets>=12.0"]   # broker pull (REST) + push (stream) adapter
postgres   = ["asyncpg>=0.29"]                      # networked/production backend
api        = ["fastapi>=0.110", "uvicorn>=0.29"]    # optional read/ingest HTTP server
redis      = ["redis>=5.0"]                          # optional: consume a host platform's acct:* pub/sub
cli        = ["typer>=0.12", "rich>=13.0"]
# Installed from GitHub for now (not yet on PyPI). Switch to "security-universe>=0.x" once published.
securities = ["security-universe @ git+https://github.com/szagar/security-universe"]
dev        = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "httpx>=0.26"]  # httpx: fastapi.testclient

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
tt-ledger = "tt_ledger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tt_ledger"]

# Allow the git+ direct reference in the [securities] extra (security-universe not yet on PyPI).
# Remove once that pin becomes a normal version specifier.
[tool.hatch.metadata]
allow-direct-references = true

# Notes:
# - Base install needs no broker/infra deps: SQLite + the schema/SDK work standalone.
# - `pip install tt-ledger[tastytrade,postgres,api,cli]` for the full networked deployment.
